--- a/sass/layouts/_header-navigation.scss
+++ b/sass/layouts/_header-navigation.scss
@@ -5,16 +5,14 @@
 .menu {
   display: none;
 
-  @media screen and (min-width: 768px) {
+  @include tablet {
     padding: 32px 96px 32px 88px;
     display: flex;
     gap: 50px;
   }
     
-  @media screen and (min-width: 1200px) {
+  @include desktop {
     padding: 32px 318px 32px 93px;
-    display: flex;
-    gap: 50px;
   }
 
   &__close {
