--- a/sass/layouts/_modal-window.scss
+++ b/sass/layouts/_modal-window.scss
@@ -20,14 +20,8 @@
 }
 
 .modal {
-
-height: 609px;
-  /* width: 528px; */
   width: 450px;
-/*   margin-top: 93px;
-  margin-bottom: 93px; */
-  top: 0;
-  /* min-height: 581px; */
+  height: 609px;
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -39,6 +33,11 @@ height: 609px;
   bottom: 50%;
   transform: translate(-50%, -50%);
   transition: transform var(--animation), border-radius var(--animation);
+
+  @include desktop {
+    width: 528px;
+    height: 581px;
+  }
 
   &-close {
     width: 30px;
