--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -11,7 +11,7 @@
 }
 
 @mixin mobile {
-  @media screen and (min-width: 320px) and (max-width: 480px) {
+  @media screen and (min-width: 480px) {
     @content;
   }
 }
