--- a/css/main.css
+++ b/css/main.css
@@ -1112,8 +1112,8 @@ footer {
 }
 
 .modal {
-  width: 450px;
-  height: 609px;
+  /*   width: 450px;
+    height: 609px; */
   background-color: var(--white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -1123,6 +1123,15 @@ footer {
   bottom: 50%;
   transform: translate(-50%, -50%);
   transition: transform var(--animation), border-radius var(--animation);
+}
+@media screen and (max-width: 1199px) {
+  .modal {
+    height: 95%;
+    width: 95%;
+    max-height: 609px;
+    max-width: 450px;
+    overflow: scroll;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
@@ -1261,7 +1270,6 @@ footer {
 }
 .input-wrap {
   position: relative;
-  margin-top: px;
 }
 
 .checkbox-label {
@@ -1272,6 +1280,11 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+@media screen and (max-width: 479px) {
+  .checkbox-label {
+    flex-wrap: wrap;
+  }
 }
 @media screen and (min-width: 1200px) {
   .checkbox-label {
