--- a/sass/layouts/_modal-window-content.scss
+++ b/sass/layouts/_modal-window-content.scss
@@ -121,7 +121,6 @@
 
   &-wrap {
     position: relative;
-    margin-top: px;
   }
 }
 
@@ -135,6 +134,10 @@
     color: var(--primary-text-color);
     @include align-list;
     justify-content: center;
+
+    @media screen and (max-width: 479px) {
+    flex-wrap: wrap;
+    }
 
     @include desktop {
       font-size: 14px;
