--- a/css/main.css
+++ b/css/main.css
@@ -461,7 +461,7 @@ section {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-color);
-  width: 360px;
+  max-width: 360px;
   margin: 0 auto;
 }
 @media screen and (min-width: 1200px) {
@@ -549,7 +549,7 @@ section {
   padding-top: 0px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 1199px) {
   .pictures {
     display: none;
   }
