--- a/sass/layouts/_hero-banner.scss
+++ b/sass/layouts/_hero-banner.scss
@@ -40,7 +40,7 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--white-color);
-    width: 360px;
+    max-width: 360px;
     margin: 0 auto;
 
     @include desktop {
