--- a/css/main.css
+++ b/css/main.css
@@ -466,7 +466,7 @@ section {
 }
 @media screen and (min-width: 1200px) {
   .banner__title {
-    width: 696px;
+    max-width: 696px;
     font-size: 44px;
     line-height: 1.36;
   }
