--- a/sass/layouts/_hero-banner.scss
+++ b/sass/layouts/_hero-banner.scss
@@ -44,7 +44,7 @@
     margin: 0 auto;
 
     @include desktop {
-      width: 696px;
+      max-width: 696px;
       font-size: 44px;
       line-height: 1.36;
     }
